# vortex

./: .clineignore  .eslintignore  .eslintrc  .gitignore  .gitmodules  .mcp.json  .prettierignore  .prettierrc  ACTION-PLAN.md  App.css  CLAUDE.md  FULL-AUDIT-REPORT.md  LICENSE  MAP.md  PR_SUMMARY.md  README.md  SECURITY_AUDIT.md  SKILLS.md  _redirects  biome.json  bun.lockb  bunfig.toml  calculate-gas-fee.ts  eligible-users.csv  fix_migration.py  index.html  jest.config.cjs  package.json  tailwind.config.js  testing.patch  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/agents/: code-architect.md  code-simplifier.md  debugger.md  pr-reviewer.md  security-reviewer.md  test-writer.md
.clinerules/: 01-general-rules.md  02-useful-prompts.md  03-frontend-rules.md
.github/workflows/: autodeploy.yaml  ci.yml  contracts.yml  e2e.yml
.opencode/agents/: m3-implementor.md
.sisyphus/plans/: backend-client-observability-plan.md
.storybook/: main.ts
ISSUE_TEMPLATE/: avenia_api_v2_support.md
api/: .env.example  .eslintrc  .eslintrc.js  .gitignore  README.md  bun.lockb  package.json
api/src/: index.ts
api/webhooks-cache/: index.js
apps/api/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  bunfig.toml  package.json  tsconfig.json
apps/dashboard/: .env.example  .gitignore  App.css  _redirects  components.json  index.html  netlify.toml  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/frontend/: .env.example  .eslintignore  .gitignore  .impeccable.md  App.css  CLAUDE.md  LICENSE  _redirects  components.json  index.html  netlify.toml  package.json  playwright.config.ts  site.webmanifest  tsconfig.json  (+3 more)
clinerules-bank/: frontend-to-backend-migration.md
config/: babel.jest.cjs
contracts/: AmberCurve.optimized.wasm  AmberCurve.wasm  BackstopPool.optimized.wasm  BackstopPool.wasm  ChainlinkAdapter.optimized.wasm  ChainlinkAdapter.wasm  MockERC20.optimized.wasm  MockERC20.wasm  README.md  Router.optimized.wasm  Router.wasm  SwapPool.optimized.wasm  SwapPool.wasm
docs/: Alfredpay.md  add-updateRamp-endpoint-plan.md  code-review-1161-sdk-changes.md  dashboard-app-spec.md  mykobo-base-flow-chart.md  mykobo-base-flow.md  test-audit-findings.md  test-suite-integrity-check.md  testing-strategy.md
frontend/: .prettierignore  App.css  _redirects  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
memory-bank/: activeContext.md  decisionLog.md  phases.md  productContext.md  progress.md  projectbrief.md  sharedModulePlan.md  systemPatterns.md  techContext.md
mooncontracts/: Erc20ABI.json  baseline.sol  baselineABI.json  splitReceiver.sol  splitReceiver2.sol  splitReceiverABI.json  splitReceiverABI2.json
python-sdk/: .gitignore  INSTALL.md  LICENSE  MANIFEST.in  PUBLISHING.md  QUICKSTART_PUBLISH.md  README.md  pyproject.toml  setup.py  test_imports.py
python-sdk/examples/: __init__.py  example_brl_offramp.py  example_brl_onramp.py
python-sdk/vortex_sdk/: __init__.py  api_service.py  brl_handler.py  constants.py  errors.py  vortex_sdk.py
pythonmonkey-sdk/: .gitignore  BRIDGE_SOLUTION.md  INSTALL.md  MANIFEST.in  QUICKSTART.md  README.md  TROUBLESHOOTING.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  setup_check.py  test_bridge.py  test_import.py
pythonmonkey-sdk/examples/: async_example.py  brl_offramp_example.py  brl_onramp_example.py
pythonmonkey-sdk/src/vortex_sdk/: __init__.py  bridge.py  exceptions.py  sdk.py  types.py
pythonmonkey-sdk/src/vortex_sdk_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pythonmonkey-sdk/tests/: test_sdk.py
relayer-contract/: .env.example  SECURITY_AUDIT.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
scripts/: check-coverage.ts  coverage-report.ts
shared/: bun.lockb  package.json  tsconfig.cjs.json
signer-service/: .env  .env.example  .env.prod  .env.test  .eslintrc  .swcrc  Dockerfile  README.md  bun.lockb  package.json  tsconfig.json
signer-service-rust/: .env  .env.example  Cargo.toml  README.md  diesel.toml  rust-toolchain.toml
signer-service-rust/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
signer-service-rust/resources/tokens/: BRL.json  EURC.json
signer-service-rust/src/: helper.rs  main.rs
signer-service-rust/src/api/: default.html  mod.rs  requests.rs  routes.rs  routes_static.rs  routes_stellar.rs  sep24Result.rs  token.rs
signer-service-rust/src/api/horizon/: create_account_tx.rs  helper.rs  mod.rs  payment_and_merge_tx.rs  tx_builder.rs
signer-service-rust/src/api/routes/: impls.rs  methods.rs  mod.rs  routes.rs  stellar_impls.rs
signer-service-rust/src/config/: account.rs  database.rs  error.rs  mod.rs  server.rs  wallet.rs
signer-service-rust/src/db/: impls.rs  mod.rs  models.rs  schema.rs
signer-service-rust/src/domain/models/: mod.rs  requests.rs  sep24Result.rs  token.rs
signer-service-rust/src/infra/: db.rs  error.rs  mod.rs  models.rs  token.rs
signer-service-rust/src/utils/: helper.rs  mod.rs
src/: GlobalStateProvider.tsx  app.tsx  main.tsx  theme.ts  wagmiConfig.ts
stories/: Button.stories.ts  Header.tsx  Page.stories.ts  Page.tsx
supabase/: .gitignore  config.toml
(+2957 files in other folders)
