[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vortex-finance-sdk"
version = "0.1.0"
description = "Python SDK for Vortex Finance cross-chain ramp operations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Vortex Finance", email = "support@vortexfinance.co"}
]
keywords = ["vortex", "finance", "crypto", "ramp", "onramp", "offramp", "brl", "pix"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/pendulum-chain/vortex"
Documentation = "https://api-docs.vortexfinance.co"
Repository = "https://github.com/pendulum-chain/vortex"
"Bug Tracker" = "https://github.com/pendulum-chain/vortex/issues"
