[package]
name = "signer-service-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }

deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.1.6", features = ["postgres", "serde_json", "uuid"]}
diesel_migrations = "2.1.0"

# well-maintained fork of dotenv
dotenvy = "0.15.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"]}

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}

[dev-dependencies]
anyhow = "1.0.86"