[package]
name = "signer-service-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }

deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2", features = ["postgres", "serde_json", "uuid"]}
diesel_migrations = "2.2.0"

# well-maintained fork of dotenv
dotenvy = "0.15.7"

hex = { version = "0.4.3", default-features = false,  features = ['alloc']  }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# pendulum libs
wallet = { git = "https://github.com/pendulum-chain/spacewalk", default-features = false, rev ="e7a672ba1e21c98a70df30a6ee458317951dd597"}
substrate-stellar-sdk = {git = "https://github.com/pendulum-chain/substrate-stellar-sdk", branch = "polkadot-v0.9.42", default-features = false, features = ['all-types']}

tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"]}

tower-http = { version = "0.5.2", features = ["fs"]}

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}

[dev-dependencies]
anyhow = "1.0.86"